tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_or_pattern_2__unreachable_case_or_pattern_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Foo = a | b

let foo (x: Foo) (y: Foo): Int =
  {x, y} .(

    \{x = a | b, y = a} -> 1
    \{x = a | b, y = a | b} -> 1
  // ^^^^^^^^^^^^^^^^^^^^^^
  // Error: this pattern contains a an unreachable subpattern, namely:
  //    {x: A, y: A}
  )

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_or_pattern_2/unreachable_case_or_pattern_2.kk:7:6
  │
7 │     \{x = a | b, y = a | b} -> 1
  │      ^^^^^^^^^^^^^^^^^^^^^^ Partially unreachable case
  │
  = This case is partially unreachable because it contains a redundant pattern that is already handled by previous cases.
    Namely:

        { x = a, y = a }
